shorty: fixed width of status filter to be readable even when a status is selected

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -279,7 +279,7 @@
   border-radius: 0.3em;
 }
 .shorty-list #toolbar #status select {
-  width: 5em;
+  width: 6.4em;
 }
 
 .shorty-expired {
